# Rastreabilidad-ubicacion

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json  settings.local.json
.claude/agents/: canvas-expert.md  deploy-windows.md  docs-sync.md  e2e-validator.md  netteo-guard.md  sql-eps-expert.md  ui-polish.md
backend/: .env.example  .env.test.example  README.md  pyproject.toml  uv.out
backend/docs/: algoritmo-netteo.md  architecture.md  conventions.md  data-flow.md  testing.md
backend/src/rbom_api/: __init__.py  config.py  deps.py  logging_setup.py  main.py
backend/src/rbom_api/domain/: __init__.py  db.py  modelo.py  netteo.py
backend/src/rbom_api/routers/: arbol.py  bloques.py  health.py  pts.py
backend/src/rbom_api/services/: arbol_service.py
backend/src/rbom_api/sql/: Q_bloques.sql  Q_detalle.sql  Q_listado.sql  Q_plantas.sql  Q_pts_en_proceso.sql
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_arbol_real.py
backend/tests/unit/: test_netteo.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.out
frontend/docs/: architecture.md  conventions.md  data-flow.md  nodes-and-edges.md  testing.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  queries.ts  types.ts
frontend/src/components/: ModeToggle.tsx  Tabs.tsx
scripts/: build.ps1  dev-down.ps1  dev-up.ps1  install-service.ps1
scripts/hooks/: netteo-tests-gate.ps1  typecheck-frontend.ps1  types-mirror-warning.ps1
(+19 files in other folders)
