[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbom_api"
version = "0.1.0"
description = "API backend para Rastreabilidad BOM (FastAPI + pyodbc)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "pyodbc>=5.2,<6",
    "structlog>=24.4,<25",
    "cachetools>=5.5,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.27,<0.28",
    "pytest-cov>=5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rbom_api = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: requiere BD EPS real (192.168.4.5)",
]
